# Titanic_Prediction

./: .gitignore  README.md  justfile  pyproject.toml
mlruns/0/: meta.yaml
mlruns/358658883133327308/: meta.yaml
mlruns/358658883133327308/f7926602d37f4adb823d3118ca77a9c6/: meta.yaml
mlruns/358658883133327308/f7926602d37f4adb823d3118ca77a9c6/tags/: mlflow.runName  mlflow.source.git.commit  mlflow.source.name
notebooks/: titanic-survivor-prediction.ipynb
src/config/: titanic_config.py
src/notebook/: titanic_EDA.ipynb  titanic_preprocessing.ipynb
src/processing/: processing.py  schemas.py
src/tasks/: transform.py
src/titanic_survivor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/utils/: config.py  readers.py
